Fix bug where previous_preset invocation in non-paint tool would erroneously keep the old opacity values when switching back to a paint tool.

We need to keep track of the preset when we reactivate tool_paint
to ensure that we are switching back to the same tool and are
interested in restoring any opacity changes from before.

BUG:441865
(cherry picked from commit dc9bcf9374182c43cbac746593ddc0410a834d4f)